--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+# Ignore Gradle project-specific cache directory
+.gradle
+
+/.idea/
