--- a/swagger-grails4/build.gradle
+++ b/swagger-grails4/build.gradle
@@ -30,6 +30,9 @@ configurations {
 }
 
 dependencies {
+    // swagger
+    compile "io.swagger.core.v3:swagger-integration:2.1.3"
+
     developmentOnly("org.springframework.boot:spring-boot-devtools")
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-autoconfigure"
@@ -60,8 +63,8 @@ dependencies {
 bootRun {
     ignoreExitValue true
     jvmArgs(
-        '-Dspring.output.ansi.enabled=always', 
-        '-noverify', 
+        '-Dspring.output.ansi.enabled=always',
+        '-noverify',
         '-XX:TieredStopAtLevel=1',
         '-Xmx1024m')
     sourceResources sourceSets.main
