开发示例注解

--- a/swagger-grails4-sasmple/build.gradle
+++ b/swagger-grails4-sasmple/build.gradle
@@ -29,6 +29,20 @@ configurations {
     }
 }
 
+// 设定子项目的java文件字符编码
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
+[compileJava, compileTestJava, compileGroovy, compileTestGroovy]*.options*.encoding = 'UTF-8'
+
+grails {
+    plugins {
+        // 对多租户安全插件的依赖
+        compile project(":swagger-grails4")
+    }
+    // 解决命令行过程问题
+    pathingJar = true
+}
+
 dependencies {
     developmentOnly("org.springframework.boot:spring-boot-devtools")
     compile "org.springframework.boot:spring-boot-starter-logging"
@@ -68,8 +82,8 @@ dependencies {
 bootRun {
     ignoreExitValue true
     jvmArgs(
-        '-Dspring.output.ansi.enabled=always', 
-        '-noverify', 
+        '-Dspring.output.ansi.enabled=always',
+        '-noverify',
         '-XX:TieredStopAtLevel=1',
         '-Xmx1024m')
     sourceResources sourceSets.main
