--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,7 +1,9 @@
 name: Publish package to GitHub Packages
+
 on:
   release:
     types: [created]
+
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -15,11 +17,11 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+        uses: gradle/wrapper-validation-action@v1
       - name: Publish package
-        uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
-        working-directory: ./swagger-grails4
+        uses: gradle/gradle-build-action@bc3340afc5e3cc44f2321809ac090d731c13c514
         with:
           arguments: publish
+          build-root-directory: swagger-grails4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
