updated gradle and grails version, apply gsp plugin (#3)
* updated gradle and grails version, apply gsp plugin

* reverted gradle update

* added publication

* Revert "reverted gradle update"

This reverts commit 00f64f6b07914d0258dc8915b1a05f270d6cfcfb.

* incremented version

Co-authored-by: Jan Hirsiger <jan.hirsiger@webapps.ch>

--- a/swagger-grails4/build.gradle
+++ b/swagger-grails4/build.gradle
@@ -12,13 +12,12 @@ plugins {
     id 'maven-publish'
 }
 
-version "1.0.0"
+version "1.0.1-test4"
 group "swagger.grails4"
 
 apply plugin:"eclipse"
 apply plugin:"idea"
 apply plugin:"org.grails.grails-plugin"
-apply plugin:"org.grails.grails-plugin-publish"
 apply plugin:"asset-pipeline"
 apply plugin:"org.grails.grails-gsp"
 
@@ -97,6 +96,11 @@ publishing {
                 username = System.getenv("GITHUB_ACTOR")
                 password = System.getenv("GITHUB_TOKEN")
             }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
         }
     }
 }
